--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   },
   "dependencies": {
     "@hapi/iron": "6.0.0",
+    "aws-sdk": "^2.1399.0",
+    "axios": "^1.4.0",
     "cookie": "0.4.0",
+    "date-fns": "^2.30.0",
+    "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
     "next-connect": "^0.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0-next.1",
+    "react-query": "^3.39.3",
     "swr": "^2.0.0",
     "uuidv4": "6.2.5"
   }
